2011-08-10  NIIBE Yutaka  <gniibe@fsij.org>

	* boards/STM8S_DISCOVERY/mcuconf.h: New.
	* boards/STM8S_DISCOVERY/board.h: New.
	* boards/STM8S_DISCOVERY/board.c: New.

2011-07-22  NIIBE Yutaka  <gniibe@fsij.org>

	* boards/OLIMEX_STM32_H103/mcuconf.h (STM32_USBPRE): Add.

	* src/main.c (main): Fix one shot logic.

2011-07-21  NIIBE Yutaka  <gniibe@fsij.org>

	* src/neug.h (NEUG_PRE_LOOP): New.

	* src/main.c (led_blinker): New.
	(main): Use led_blinker.
	(main): Call neug_get before USB configuration at least
	NEUG_PRE_LOOP times.

2011-07-14  NIIBE Yutaka  <gniibe@fsij.org>

	* src/configure: Support CQ_STARM.
	* boards/CQ_STARM: Added.

	* Version 0.00.
