@@ -1,3 +1,11 @@
+2011-08-19  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/random.c (tmt_one_step): No argument.
+	(crc32_top_bit, crc32_add_bit): New.
+	(rng_gen): Have return value.  Put interrupt timing entropy
+	to CRC32 shift register, and use the top bit of CRC32 to
+	shake the steps of TMT.
+
 2011-08-10  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* boards/STM8S_DISCOVERY/mcuconf.h: New.
